connection base mongodb

--- a/VDM_stockFX/pom.xml
+++ b/VDM_stockFX/pom.xml
@@ -25,4 +25,26 @@
       </plugin>
     </plugins>
   </build>
+  <dependencies>
+  <dependency>
+        <groupId>org.mongodb</groupId>
+        <artifactId>mongo-java-driver</artifactId>
+        <version>2.13.3</version>
+    </dependency>
+    <dependency>
+      <groupId>org.jongo</groupId>
+      <artifactId>jongo</artifactId>
+      <version>1.2</version>
+    </dependency>
+     <dependency>
+      <groupId>com.fasterxml.jackson.datatype</groupId>
+      <artifactId>jackson-datatype-jsr310</artifactId>
+      <version>2.6.1</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.datatype</groupId>
+      <artifactId>jackson-datatype-jdk8</artifactId>
+      <version>2.6.1</version>
+    </dependency>
+  </dependencies>
 </project>
