--- a/VDM_stockFX/pom.xml
+++ b/VDM_stockFX/pom.xml
@@ -46,5 +46,10 @@
       <artifactId>jackson-datatype-jdk8</artifactId>
       <version>2.6.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.scream3r</groupId>
+      <artifactId>jssc</artifactId>
+      <version>2.8.0</version>
+</dependency>
   </dependencies>
 </project>
